k8s/production/metabase/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-postgres
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase-postgres
  template:
    metadata:
      labels:
        app: metabase-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: metabase-postgresql
