k8s/production/metabase/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase
  namespace: monitoring
spec:
  parentRefs:
    - name: spack-gateway
      namespace: gateway-api
  hostnames:
    - metabase.spack.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: metabase
          port: 3000
